--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -15,31 +15,13 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.11/babel.min.js"></script>
+    <script type="text/babel" src="Card.js"></script>
   </head>
   <body>
     <div id="root"></div>
 
     <script type="text/babel">
-      const markup = (
-        <div className="row">
-          <div className="col s2">
-            <div className="card hoverable small">
-              <div className="card-image">
-                <img src="https://loremflickr.com/640/360" />
-              </div>
-              <div className="card-content">
-                <p>React From the Beginning</p>
-                <p>Robert Bunch</p>
-              </div>
-              <div className="card-action">
-                <a href="#">$9.99</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      );
-
-      ReactDOM.render(markup, document.getElementById("root"));
+      ReactDOM.render(<Card />, document.getElementById("root"));
     </script>
   </body>
 </html>
