--- a/lesson-1/index.html
+++ b/lesson-1/index.html
@@ -16,12 +16,10 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.20.11/babel.min.js"></script>
     <script type="text/babel" src="Card.js"></script>
+    <script src="data.js"></script>
+    <script type="text/babel" src="app.js"></script>
   </head>
   <body>
     <div id="root"></div>
-
-    <script type="text/babel">
-      ReactDOM.render(<Card />, document.getElementById("root"));
-    </script>
   </body>
 </html>
